--- a/java/demo/build.gradle
+++ b/java/demo/build.gradle
@@ -20,6 +20,9 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://repo.osgeo.org/repository/release/'
+	}
 }
 
 dependencies {
@@ -40,6 +43,9 @@ dependencies {
 	implementation 'org.locationtech.proj4j:proj4j:1.3.0'	
 	implementation 'org.locationtech.proj4j:proj4j-epsg:1.3.0'
 	implementation 'de.grundid.opendatalab:geojson-jackson:1.14'
+	
+	implementation 'org.geotools:gt-shapefile:30.0'
+	
 
 	implementation 'com.squareup.okhttp3:okhttp'
 
