新增jackson-dataformat-xml

--- a/java/demo/build.gradle
+++ b/java/demo/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 	
 	implementation 'org.geotools:gt-shapefile:30.0'
 	
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
+implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 
 	implementation 'com.squareup.okhttp3:okhttp'
 
