--- a/java/demo/build.gradle
+++ b/java/demo/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	implementation 'com.squareup.okhttp3:okhttp'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('bootBuildImage') {
