--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -4129,6 +4129,58 @@
 			"links": ["https://gis.uro.taipei/r_progress.aspx"],
 			"tags": [],
 			"contributors": ["tuic"]
+		},
+		"149": {
+			"id": 149,
+			"index": "park_parking_mall",
+			"map_config": [
+				{
+					"index": "park_parking_mall",
+					"paint": {
+						"circle-color": [
+							"case",
+							["==", ["get", "installed"], true],
+							"#E6DF44",
+							"#F4633C"
+						]
+					},
+					"property": [
+						{
+							"key": "district",
+							"name": "行政區"
+						},
+						{
+							"key": "type",
+							"name": "類別"
+						}
+					],
+					"title": "公園停車場以及賣場安裝充電樁",
+					"type": "circle",
+					"size": null,
+					"icon": null
+				}
+			],
+			"history_data": false,
+			"chart_config": {
+				"categories": ["公園", "停車場", "賣場"],
+				"types": ["ColumnChart"],
+				"color": ["#E6DF44", "#F4633C", "#D63940"],
+				"unit": "座",
+				"map_filter": ["type", ["公園", "停車場", "賣場"]]
+			},
+			"name": "公園停車場以及賣場安裝充電樁",
+			"source": "環保局",
+			"time_from": "2023-07-28T00:00:00+08:00",
+			"update_freq": null,
+			"update_freq_unit": null,
+			"short_desc": "顯示台北市所有垃圾車收運的點位。",
+			"long_desc": "顯示顯示台北市所有垃圾車收運的點位，資料來源為台北市環保局開放資料，不定期更新。",
+			"use_case": "透過這些點位資訊，我們可以更有效地安排垃圾車的收運路線，提升垃圾處理的效率，同時也能了解垃圾處理設施的分佈情況，並根據需求進行相應的環保政策調整。",
+			"links": [
+				"https://data.taipei/dataset/detail?id=6bb3304b-4f46-4bb0-8cd1-60c66dcd1cae"
+			],
+			"tags": [],
+			"contributors": ["tuic"]
 		}
 	}
 }
