--- a/java/demo/build.gradle
+++ b/java/demo/build.gradle
@@ -51,6 +51,10 @@ implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 
 	implementation 'com.squareup.okhttp3:okhttp'
 
+// https://mvnrepository.com/artifact/com.opencsv/opencsv
+implementation 'com.opencsv:opencsv:5.8'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
