--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -4115,6 +4115,23 @@
 					"type": "circle",
 					"icon": "triangle_white",
 					"title": "既有充電樁"
+				},
+				{
+					"index": "chargepoint_area",
+					"paint": {
+						"fill-color": "#00ff00",
+						"fill-opacity": 0.5
+					},
+					"property": [
+						{
+							"key": "district",
+							"name": "行政區"
+						}
+					],
+					"type": "fill",
+					"size": null,
+					"icon": null,
+					"title": "電動汽車充電格區塊"
 				}
 			],
 			"chart_config": {
@@ -4186,11 +4203,11 @@
 			],
 			"history_data": false,
 			"chart_config": {
-				"categories": ["公園", "停車場", "超級市場"],
+				"categories": ["公園", "停車場", "超級市場", "寺廟"],
 				"types": ["ColumnChart"],
-				"color": ["#E6DF44", "#F4633C", "#D63940"],
+				"color": ["#E6DF44", "#F4633C", "#D63940", "#D63940"],
 				"unit": "樁",
-				"map_filter": ["type", ["公園", "停車場", "超級市場"]]
+				"map_filter": ["type", ["公園", "停車場", "超級市場", "寺廟"]]
 			},
 			"name": "充電樁安裝現況",
 			"source": "工務局、交通局停管處、產業局市場處",
@@ -4415,6 +4432,29 @@
 			],
 			"tags": [],
 			"contributors": ["tuic"]
+		},
+		"171": {
+			"id": 171,
+			"index": "growth_of_charge_station",
+			"history_data": false,
+			"map_config": null,
+			"chart_config": {
+				"color": ["#FD5696"],
+				"types": ["AreaBrushChart"],
+				"unit": "格"
+			},
+			"name": "充電停車格成長",
+			"source": "交通局停管處",
+			"time_from": "2020-01-01T23:59:59+08:00",
+			"time_to": "2022-12-31T23:59:59+08:00",
+			"update_freq": 1,
+			"update_freq_unit": "year",
+			"short_desc": "顯示從109年每年汽機車充電停車格統計資訊",
+			"long_desc": "顯示從109年起每年的汽機車充電停車格統計資訊，資料來源為台北市主計處開放資料，每年更新。",
+			"use_case": "藉由掌握台北市汽機車充電停車格的統計資訊，我們可以評估哪些地區有建置充電停車格的需求",
+			"links": null,
+			"tags": [],
+			"contributors": ["chteng"]
 		}
 	}
 }
