--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -4158,10 +4158,10 @@
 			},
 			"name": "既有充電樁",
 			"source": "交通局停管處",
-			"time_from": "2023-06-02T00:00:00+08:00",
+			"time_from": "2023-09-22T00:00:00+08:00",
 			"time_to": null,
 			"update_freq": 1,
-			"update_freq_unit": "day",
+			"update_freq_unit": "year",
 			"short_desc": "顯示全市停車場充電樁安裝數量於各行政區的統計",
 			"long_desc": "顯示全市停車場充電樁安裝數量於各行政區的統計，資料來源為臺北市停車管理工程處開放資料，不定期更新。",
 			"use_case": "統計台北市各行政區的停車場充電樁安裝數量，若需更詳細的資料可透過地圖模式進行查詢。",
@@ -4258,8 +4258,8 @@
 			"name": "非公用閒置土地",
 			"source": "財政局",
 			"history_data": false,
-			"time_from": "2023-05-01T00:00:00+08:00",
-			"time_to": "2023-05-29T14:50:55+08:00",
+			"time_from": "2023-07-06T00:00:00+08:00",
+			"time_to": null,
 			"update_freq": null,
 			"update_freq_unit": null,
 			"short_desc": "顯示全市非公用閒置土地數量統計。",
@@ -4350,7 +4350,7 @@
 			},
 			"name": "配電站分佈",
 			"source": "工務局",
-			"time_from": "2023-07-28T00:00:00+08:00",
+			"time_from": "2022-08-05T00:00:00+08:00",
 			"update_freq": null,
 			"update_freq_unit": null,
 			"short_desc": "顯示台北市所有配電站於各行政區設置統計。",
@@ -4418,7 +4418,7 @@
 			},
 			"name": "變壓器分佈",
 			"source": "工務局",
-			"time_from": "2023-07-28T00:00:00+08:00",
+			"time_from": "2022-08-05T00:00:00+08:00",
 			"update_freq": null,
 			"update_freq_unit": null,
 			"short_desc": "顯示台北市所有變壓器於各行政區設置統計。",
@@ -4515,16 +4515,16 @@
 				]
 			},
 			"name": "歷史積水次數統計",
-			"source": "工務局",
-			"time_from": "2023-06-02T00:00:00+08:00",
+			"source": "工務局水利處",
+			"time_from": "2023-06-08T00:00:00+08:00",
 			"time_to": null,
-			"update_freq": 10,
-			"update_freq_unit": "minute",
+			"update_freq": 5,
+			"update_freq_unit": "year",
 			"short_desc": "顯示全市各行政區歷史積水次數統計。",
-			"long_desc": "顯示全市各行政區歷史積水次數統計，資料來源為工務局水利處、，每10分鐘更新。",
+			"long_desc": "顯示全市各行政區歷史積水次數統計，資料來源為工務局水利處、，每1年更新。",
 			"use_case": "圖表僅呈現行政區的施工數量統計，若要得知更具體的施工位置資訊，可透過地圖模式查詢。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=fa1e8012-ebb4-473b-888e-97f9a9ce365e",
+				"https://data.taipei/dataset/detail?id=8377b584-81e9-432d-b902-5b4e9978e6bc",
 				"https://data.taipei/dataset/detail?id=f98010ed-281d-4334-9596-ca7d740cc06f"
 			],
 			"tags": [],
